--- a/myblogs/accounts/templates/accounts/signup.html
+++ b/myblogs/accounts/templates/accounts/signup.html
@@ -1,20 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% if error %}
+{{ error }}
+{% endif %}
 <h1 class="mt-3">Sign up</h1>
 <form class="mt-2" style="width:500px;" action="{% url 'signup'%}" method="POST">
     {% csrf_token %}
     <div class="form-group">
         <label for="userId">User Id:</label>
-        <input type="text" class="form-control" id="userId" placeholder="Enter User id">
+        <input type="text" name="username" class="form-control" id="userId" placeholder="Enter User id">
     </div>
     <div class="form-group">
         <label for="password1">Password</label>
-        <input type="password" class="form-control" id="password1" placeholder="Password">
+        <input type="password" name="password1" class="form-control" id="password1" placeholder="Password">
     </div>
     <div class="form-group">
         <label for="password2">Confirm Password</label>
-        <input type="password" class="form-control" id="password2" placeholder="Password">
+        <input type="password" name="password2" class="form-control" id="password2" placeholder="Type password again">
     </div>
 
     <button type="submit" class="btn btn-dark">Submit</button>
