--- a/myblogs/accounts/templates/accounts/login.html
+++ b/myblogs/accounts/templates/accounts/login.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+{% if error %}
+{{ error }}
+{% endif %}
+<br>
 <h1>Login
 
 </h1>
@@ -9,11 +12,11 @@
     {% csrf_token %}
     <div class="form-group">
         <label for="userId">User Id:</label>
-        <input type="text" class="form-control" id="userId" placeholder="Enter User id">
+        <input type="text" class="form-control" id="userId" name="username" placeholder="Enter User id">
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
+        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-dark">Submit</button>
 
