--- a/myblogs/myblogs/templates/base.html
+++ b/myblogs/myblogs/templates/base.html
@@ -38,7 +38,7 @@
 
         <div class="navbar navbar-light" style="background-color:#343a40;">
             <div class="container d-flex justify-content-between">
-                <a href="" class="navbar-brand d-flex align-items-center">
+                <a href="{% url 'home'%}" class="navbar-brand d-flex align-items-center">
                     <img class="d-inline-block alighn-top mr-2" src="{% static 'logo.png' %}" height=30 width=30
                         alt="logo" />
 
