added blog page and dash board

--- a/myblogs/myblogs/templates/base.html
+++ b/myblogs/myblogs/templates/base.html
@@ -13,39 +13,42 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
-        .justify-content-between {
-            margin-left: 15px;
-            margin-right: 20px;
+        
+        .login{
+            margin-left:10px;
         }
-
         .navanch {
             color: white;
             margin-right: 5px;
         }
+        .nav-link{
+            color: #ffff;
+        }
     </style>
     <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
+    <!-- <link href="album.css" rel="stylesheet"> -->
 </head>
 
 <body>
     <header>
 
-        <div class="navbar navbar-light" style="background-color:#343a40;">
-            <div class="container d-flex justify-content-between">
+        <div class="navbar navbar-light" style="background-color:cadetblue;">
+            <div class="container-fluid d-flex justify-content-between">
                 <a href="{% url 'home'%}" class="navbar-brand d-flex align-items-center">
                     <img class="d-inline-block alighn-top mr-2" src="{% static 'logo.png' %}" height=30 width=30
                         alt="logo" />
 
-                    <strong>My Blog</strong>
+                    <strong style="color: #ffff;">My Blog</strong>
                 </a>
-                <div>
+                <div style="display: inline-flex;">
                     {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'create' %}">Create Blog</a>
                     <a class="nav-item nav-link"
                         href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form id="logout" method="POST" action="{% url 'logout' %}">
@@ -55,7 +58,7 @@
                     </form>
                     {% else%}
                     <a class="navanch" href="{% url 'signup' %}">Sign Up</a>
-                    <a class="navanch" href="{% url 'login' %}">Login</a>
+                    <a class="navanch login" href="{% url 'login' %}">Login</a>
                     {% endif %}
 
                 </div>
@@ -78,12 +81,14 @@
                 back to bottom
         </div>
     </footer>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
 
