--- a/myblogs/blogs/templates/blogs/blog-page.html
+++ b/myblogs/blogs/templates/blogs/blog-page.html
@@ -13,58 +13,57 @@
         <div class="col-9">
             <div class="card card-body" id="style-7" style="font-family: cursive;box-shadow: -20px 20px 0px 1px #ced4; max-height: 70vh;
             overflow-y: auto;">
-                    {{blog.body}}
+                {{blog.body}}
             </div>
         </div>
         <div class="col-3">
-            <div class="card card-body"   class="force-overflow">
+            <div class="card card-body" class="force-overflow">
                 <h6>Author :</h6>
                 <h4>{{blog.author|title}}</h4>
-                    {{blog.posted_on}}            
+                {{blog.posted_on|date:"M d, Y"}}
             </div>
-            <div class="card card-body" style="text-align: center;font-weight: bold;">
-                <i class="fa fa-heart btn button" action="{% url 'likes' product.id %}" aria-hidden="true" style="color: black;font-size: xx-large;"></i>Like: {{blog.like_total}}<i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
+            <!--<div class="card card-body" style="text-align: center;font-weight: bold;">
+                <i class="fa fa-heart btn button"  aria-hidden="true" style="color: black;font-size: xx-large;"></i>Like: {{blog.like_total}}<i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
             </div>
-            <!-- <div class="card card-body" style="text-align: center;font-weight: bold;">
+             <div class="card card-body" style="text-align: center;font-weight: bold;">
                 <i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
             </div> -->
 
-            <!--    <div class="card card-body" style="text-align: center;font-weight: bold;">
-                <form id="upvote" action="{% url 'likes' product.id %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden">
-                </form>
-                <a href="javascript:{document.getElementById('upvote').submit()}"><i class="fa fa-heart btn button"  aria-hidden="true"
-                    style="color: black;font-size: xx-large;"></i>Like: {{blog.like_total}}</a>
-                <i class="fa fa-eye"
-                    aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
-            </div> -->
+            <div class="card card-body" style="text-align: center;font-weight: bold;">
+
+                <a href="javascript:{document.getElementById('like').submit()}">
+                    <i class="fa fa-heart btn button" aria-hidden="true"
+                        style="color: black;font-size: xx-large;"></i><br>Like: {{blog.like_total}}</a>
+                <i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
+            </div>
+            <form id="like" action="{% url 'like' blog.id %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden">
+            </form>
+
         </div>
     </div>
 </div>
 <style>
-    #style-7::-webkit-scrollbar-track
-    {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    #style-7::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         background-color: #F5F5F5;
         border-radius: 10px;
     }
-    
-    #style-7::-webkit-scrollbar
-    {
+
+    #style-7::-webkit-scrollbar {
         width: 10px;
         background-color: #F5F5F5;
     }
-    
-    #style-7::-webkit-scrollbar-thumb
-    {
+
+    #style-7::-webkit-scrollbar-thumb {
         border-radius: 10px;
         background-image: -webkit-gradient(linear,
-                                           left bottom,
-                                           left top,
-                                           color-stop(0.44, rgb(122,153,217)),
-                                           color-stop(0.72, rgb(73,125,189)),
-                                           color-stop(0.86, rgb(28,58,148)));
+                left bottom,
+                left top,
+                color-stop(0.44, rgb(122, 153, 217)),
+                color-stop(0.72, rgb(73, 125, 189)),
+                color-stop(0.86, rgb(28, 58, 148)));
     }
 </style>
 {% endblock%}
