models for like modified

--- a/myblogs/blogs/templates/blogs/create.html
+++ b/myblogs/blogs/templates/blogs/create.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<!-- blog create page for title and body -->
 {% if error %}
 <p class="text-danger">{{ error }}</p>
 {% endif %}
