--- a/myblogs/blogs/templates/blogs/blog-page.html
+++ b/myblogs/blogs/templates/blogs/blog-page.html
@@ -3,7 +3,7 @@
 {% block content %}
 <br>
 <div>
-
+<!-- firest div section of div for title and blog body -->
     <div class="row">
         <div class="col-12">
             <h1 style="font-weight: 900">{{blog.title.upper}}</h1>
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
         <div class="col-9">
-            <div class="card card-body" id="style-7" style="font-family: cursive;box-shadow: -20px 20px 0px 1px #ced4; max-height: 70vh;
+            <div class="card card-body" id="style-7" style="font-family: cursive;box-shadow: -2px 3px 20px 5px rgba(0, 0, 0, 0.25); max-height: 70vh;
             overflow-y: auto;">
                 {{blog.body}}
             </div>
@@ -22,45 +22,56 @@
                 <h4>{{blog.author|title}}</h4>
                 {{blog.posted_on|date:"M d, Y"}}
             </div>
-            <!--<div class="card card-body" style="text-align: center;font-weight: bold;">
-                <i class="fa fa-heart btn button"  aria-hidden="true" style="color: black;font-size: xx-large;"></i>Like: {{blog.like_total}}<i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
-            </div>
-             <div class="card card-body" style="text-align: center;font-weight: bold;">
-                <i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
-            </div> -->
-
+            
+<!-- div section for likes and views -->
             <div class="card card-body" style="text-align: center;font-weight: bold;">
 
                 <a href="javascript:{document.getElementById('like').submit()}">
                     <i class="fa fa-heart btn button" aria-hidden="true"
-                        style="color: black;font-size: xx-large;"></i><br>Like: {{blog.like_total}}</a>
-                <i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.like_total}}
+                        style="color: black;font-size: xx-large;"></i><br>Like: {{blog.likes.count}}</a>
+                <i class="fa fa-eye" aria-hidden="true" style="font-size: xx-large;"></i>Views: {{blog.views_total}}
             </div>
             <form id="like" action="{% url 'like' blog.id %}" method="POST">
                 {% csrf_token %}
                 <input type="hidden">
             </form>
 
+        </div><br>
+<!-- comment section start -->
+        <div class="col-4" style="margin-left: 20px;">
+            <h3>Comments</h3>
+            <form id="comments" name="comments" action="{% url 'comments' blog.id %}" method="POST">
+                {% csrf_token %}
+                <textarea rows="4" cols="50" name="comments" class="form-control" id="comments"style="margin-left: 20px;"
+                    enctype="multipart/form-data">
+                    </textarea>
+                <button class="button btn" type="submit" style="margin-left: 20px;"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send</button>
+
+            </form>
         </div>
-        {% for comment in comments.all%}
-        <div class="comment" style="margin: 20px 0px 20px 20px;">
-            <div class="date">{{ comment.comment_date| date:"M d, Y"}}</div>
-            <strong>{{ comment.comment_author }}</strong>
-            <p>{{ comment.comment_content|linebreaks }}</p>
-            
+        <div class="col-8" style="margin-left: 20px;">
+            {% for comment in comments.all%}
+            <div class="comment card card-body "
+                style="margin: 20px 0px 20px 20px;box-shadow: -2px 3px 20px 5px rgba(0, 0, 0, 0.25);">
+                <div class="date">{{ comment.comment_date| date:"M d, Y"}}</div>
+                <strong>{{ comment.comment_author }}</strong>
+                <p>{{ comment.comment_content|linebreaks }}</p>
+
+            </div>
+
+            {% empty %}
+            <div class="card crd-body">
+                <p>No comments here yet :(</p>
+            </div>
+            {% endfor %}
         </div>
-        {% empty %}
-        <p>No comments here yet :(</p>
-        {% endfor %}
+        <!-- comment section end -->
     </div>
 </div>
+
 <style>
     #style-7::-webkit-scrollbar-track {
-<<<<<<< HEAD
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-=======
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
->>>>>>> efc5ca2255cd16855350934a929d72adf885ce44
         background-color: #F5F5F5;
         border-radius: 10px;
     }
